# intra-events-notify

./: .cursorrules  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/health/: api.py  api_formats.py
app/services/: telegram_client.py
app/webhooks/: api.py  api_formats.py
scripts/: fake_create_exam_webhook.sh  fake_create_webhook.sh  fake_destroy_webhook.sh
