[project]
name = "intra-events-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-telegram-bot>=22.2",
    "sentry-sdk>=2.32.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "black",
    "isort",
    "flake8",
    "python-dotenv",
]

[tool.isort]
profile = 'black'
src_paths = ['app']
line_length = 120

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = '3.12'
disallow_any_unimported = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
disallow_untyped_defs = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
mypy_path = './stubs'
